# GeocodeMS

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.cmd
app/: __init__.py  crud.py  schemas.py
app/routers/: clientele.py  geocode.py
